compilador_minic/MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'('", "')'", "'{'", "'}'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'", "'int'", "'if'", 
                     "'else'", "'while'", "'break'", "'continue'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "IF", "ELSE", "WHILE", 
                      "BREAK", "CONTINUE", "RETURN", "IDENTIFIER", "CONSTANT_INT", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_definition = 1
    RULE_data_definition = 2
    RULE_declarator = 3
    RULE_function_definition = 4
    RULE_function_header = 5
    RULE_parameter_list = 6
    RULE_parameter_declaration = 7
    RULE_function_body = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_expression = 11
    RULE_binary = 12
    RULE_unary = 13
    RULE_primary = 14
    RULE_argument_list = 15

    ruleNames =  [ "program", "definition", "data_definition", "declarator", 
                   "function_definition", "function_header", "parameter_list", 
                   "parameter_declaration", "function_body", "block", "statement", 
                   "expression", "binary", "unary", "primary", "argument_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    INT=26
    IF=27
    ELSE=28
    WHILE=29
    BREAK=30
    CONTINUE=31
    RETURN=32
    IDENTIFIER=33
    CONSTANT_INT=34
    WS=35
    LINE_COMMENT=36
    BLOCK_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DefinitionContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.definition()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==26 or _la==33):
                    break

            self.state = 37
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self):
            return self.getTypedRuleContext(MiniCParser.Data_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(MiniCParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = MiniCParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.data_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_data_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_definition" ):
                listener.enterData_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_definition" ):
                listener.exitData_definition(self)




    def data_definition(self):

        localctx = MiniCParser.Data_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(MiniCParser.INT)
            self.state = 44
            self.declarator()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 45
                self.match(MiniCParser.T__0)
                self.state = 46
                self.declarator()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(MiniCParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)




    def declarator(self):

        localctx = MiniCParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(MiniCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_header(self):
            return self.getTypedRuleContext(MiniCParser.Function_headerContext,0)


        def function_body(self):
            return self.getTypedRuleContext(MiniCParser.Function_bodyContext,0)


        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = MiniCParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 56
                self.match(MiniCParser.INT)


            self.state = 59
            self.function_header()
            self.state = 60
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(MiniCParser.DeclaratorContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(MiniCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_function_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_header" ):
                listener.enterFunction_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_header" ):
                listener.exitFunction_header(self)




    def function_header(self):

        localctx = MiniCParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.declarator()
            self.state = 63
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self):
            return self.getTypedRuleContext(MiniCParser.Parameter_declarationContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)




    def parameter_list(self):

        localctx = MiniCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(MiniCParser.T__2)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 66
                self.parameter_declaration()


            self.state = 69
            self.match(MiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_parameter_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_declaration" ):
                listener.enterParameter_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_declaration" ):
                listener.exitParameter_declaration(self)




    def parameter_declaration(self):

        localctx = MiniCParser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MiniCParser.INT)
            self.state = 72
            self.declarator()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 73
                self.match(MiniCParser.T__0)
                self.state = 74
                self.declarator()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.Data_definitionContext)
            else:
                return self.getTypedRuleContext(MiniCParser.Data_definitionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = MiniCParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MiniCParser.T__4)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 81
                self.data_definition()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34007416876) != 0):
                self.state = 87
                self.statement()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(MiniCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = MiniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MiniCParser.T__4)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34007416876) != 0):
                self.state = 96
                self.statement()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(MiniCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def IF(self):
            return self.getToken(MiniCParser.IF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MiniCParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(MiniCParser.WHILE, 0)

        def BREAK(self):
            return self.getToken(MiniCParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(MiniCParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(MiniCParser.RETURN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MiniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 24, 25, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.expression()
                self.state = 105
                self.match(MiniCParser.T__1)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MiniCParser.IF)
                self.state = 108
                self.match(MiniCParser.T__2)
                self.state = 109
                self.expression()
                self.state = 110
                self.match(MiniCParser.T__3)
                self.state = 111
                self.statement()
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.match(MiniCParser.ELSE)
                    self.state = 113
                    self.statement()


                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(MiniCParser.WHILE)
                self.state = 117
                self.match(MiniCParser.T__2)
                self.state = 118
                self.expression()
                self.state = 119
                self.match(MiniCParser.T__3)
                self.state = 120
                self.statement()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.match(MiniCParser.BREAK)
                self.state = 123
                self.match(MiniCParser.T__1)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 5)
                self.state = 124
                self.match(MiniCParser.CONTINUE)
                self.state = 125
                self.match(MiniCParser.T__1)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.match(MiniCParser.RETURN)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 25820135432) != 0):
                    self.state = 127
                    self.expression()


                self.state = 130
                self.match(MiniCParser.T__1)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.block()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.match(MiniCParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary(self):
            return self.getTypedRuleContext(MiniCParser.BinaryContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = MiniCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.binary(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_binary

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class GeExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(MiniCParser.BinaryContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeExpr" ):
                listener.enterGeExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeExpr" ):
                listener.exitGeExpr(self)


    class GtExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(MiniCParser.BinaryContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGtExpr" ):
                listener.enterGtExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGtExpr" ):
                listener.exitGtExpr(self)


    class ModExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(MiniCParser.BinaryContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModExpr" ):
                listener.enterModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModExpr" ):
                listener.exitModExpr(self)


    class AssignSubExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(MiniCParser.IDENTIFIER, 0)
        def binary(self):
            return self.getTypedRuleContext(MiniCParser.BinaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignSubExpr" ):
                listener.enterAssignSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignSubExpr" ):
                listener.exitAssignSubExpr(self)


    class AssignModExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(MiniCParser.IDENTIFIER, 0)
        def binary(self):
            return self.getTypedRuleContext(MiniCParser.BinaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignModExpr" ):
                listener.enterAssignModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignModExpr" ):
                listener.exitAssignModExpr(self)


    class SubExprContext(BinaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.BinaryContext
            super().__init__(parser)
            self.copyFrom(ctx)
